--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="profile">
       <div class="image">
-          <img src="img/passport.jpg"  width="250" style="border-radius: 45%;"> 
+          <img src="img/WhatsApp Image 2022-08-22 at 9.46.48 PM.jpg"  width="250" style="border-radius: 45%;"> 
       </div>  
     
     <h2 class="name"> Hakhamanesh Karimi </h2>
